data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2157.wast
;; 8. **Test Tear Down Failure**: Create a scenario where specially nested blocks contain mismatched types and complex branch instructions causing improper resetting in `wizard_engine`, stuck in an infinite loop.

(assert_invalid
  (module (func $nested-blocks-mismatch
    (block (result i32)
      (block (result f32)
        (br_if 0 (i32.const 0))
        (i32.const 1)
      )
      (br 0 (i32.const 1))
    )
  ))
  "type mismatch"
)